==================== 2.24.2 ====================

==================== 2.24.1 ====================

==================== 2.24.0 ====================

2008-09-22  Vincent Untz  <vuntz@gnome.org>

	* workspace-switcher.glade: fix for GTK+ adjustment enforcement
	http://mail.gnome.org/archives/desktop-devel-list/2008-September/msg00148.html

==================== 2.23.92 ====================

==================== 2.23.91 ====================

==================== 2.23.90.1 ====================

==================== 2.23.90 ====================

==================== 2.23.6 ====================

==================== 2.23.5 ====================

2008-06-30  Vincent Untz  <vuntz@gnome.org>

	Fix compiler warnings. Patch by Kjartan Maraas <kmaraas@gnome.org>.
	Part of bug #521409.

	* wncklet.c:

2008-06-27  Luca Ferretti  <elle.uca@libero.it>

	* GNOME_Wncklet_Factory.server.in.in:
	* showdesktop.c: (update_icon), (display_about_dialog):
	Use "user-desktop" icon from fd.o naming spec instead deprecated
	"gnome-fs-desktop".

==================== 2.23.4 ====================

==================== 2.23.3 ====================

==================== 2.23.2.1 ====================

==================== 2.23.2 ====================

==================== 2.23.1 ====================

==================== 2.22.1.3 ====================

==================== 2.22.1.2 ====================

==================== 2.22.1.1 ====================

==================== 2.22.1 ====================

==================== 2.22.0 ====================

==================== 2.21.92 ====================

==================== 2.21.91 ====================

==================== 2.21.90 ====================

2008-01-21  Vincent Untz  <vuntz@gnome.org>

	* workspace-switcher.c: (workspace_switcher_applet_fill): call
	pager_update() a bit later, else the set_orientation() or set_n_rows()
	calls can fail

==================== 2.21.5 ====================

2007-11-13  Christian Persch  <chpe@gnome.org>
