@@ -9,7 +9,7 @@
 #ifndef __WINDOW_LIST_H__
 #define __WINDOW_LIST_H__
 
-#include <glib/gmacros.h>
+#include <glib.h>
 #include <panel-applet.h>
 
 G_BEGIN_DECLS
