@@ -33,6 +33,8 @@
 
 #include <string.h>
 #include <panel-applet.h>
+
+#include <glib/gi18n.h>
 #include <gdk/gdkkeysyms.h>
 
 #include <libwnck/selector.h>
