@@ -1,3 +1,12 @@
+2008-12-09  Vincent Untz  <vuntz@gnome.org>
+
+	* showdesktop.[ch]:
+	* window-list.[ch]:
+	* window-menu.[ch]:
+	* wncklet.[ch]:
+	* workspace-switcher.[ch]: single include for glib/gtk+, and add
+	missing #include <glib/gi18n.h>
+
 ==================== 2.24.2 ====================
 
 ==================== 2.24.1 ====================
